2011-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: read include_list and pass each line as
	  argument for restore operation.

2011-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Cast with off_t.
	* application-src/amstar.c: Cast with off_t.

2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Add ACL property.
	* man/xml-source/amstar.8.xml: Document ACL property.


2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Add AMANDA_PROG_SUNTAR, --with-suntar=??
	* configure.in: Use AMANDA_PROG_SUNTAR.
	* perl/Amanda/Constants.pm.in: Define $Amanda::Constants::SUNTAR
	* application-src/amsuntar.pl: Use $Amanda::Constants::SUNTAR,
				       Add SUNTAR-PATH property.
	* man/xml-source/amsuntar.8.xml: Document SUNTAR-PATH property.

2011-03-17  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: unset SUN_PERSONALITY on startup.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: Use -l to check symlink existance.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: export quote host and disk name, import parse
	  quoted host and disk name.

2011-03-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtrmidx.c: Fix memory leak.

2011-03-04  Dustin J. Mitchell <dustin@zmanda.com>
        * server-src/amcheck.c: drop root privs during the server check, so
          that access() will test the dumpuser's perms, not root's perms

2011-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Jan Görig
	* server-src/amrestore.pl: Allow to go to next file with -p.

2011-01-31  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndmjob_main.c: Remove remove exit on eof thread.
	* ndmp-src/ndma_comm_session.c: add a g_debug message.

2011-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: parse old SUCCESS lines properly