@@ -1,3 +1,6 @@
+2011-03-25  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Fix iteration over a list it modify.
+
 2011-03-22  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/amstar.c: read include_list and pass each line as
 	  argument for restore operation.
